Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NG_Pontos_volume__c.field-meta.xml
<CustomField>
    <fullName>NG_Pontos_volume__c</fullName>
    <label>Pontos Vendas NEOG</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>