Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NG_Soma_de_Meta__c.field-meta.xml
<CustomField>
    <fullName>NG_Soma_de_Meta__c</fullName>
    <label>Meta NEOG</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>