Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/NG_Stock_Mult_Realizado__c.field-meta.xml
<CustomField>
    <fullName>NG_Stock_Mult_Realizado__c</fullName>
    <label>Realizado Stock Mult NEOG</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>