Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Plan_Area_multiplic_propia__c.field-meta.xml
<CustomField>
    <fullName>Plan_Area_multiplic_propia__c</fullName>
    <label>Planejamiento Área multiplicação propia</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>