Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Planejamiento_de_Sem_sem_tratar__c.field-meta.xml
<CustomField>
    <fullName>Planejamiento_de_Sem_sem_tratar__c</fullName>
    <label>Planejamiento de Sem sem tratar</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>