Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Planejamiento_Tecnicos__c.field-meta.xml
<CustomField>
    <fullName>Planejamiento_Tecnicos__c</fullName>
    <label>Planejamiento Técnicos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>