Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Pontos_CRM_y_Stock_Mult_NEOG__c.field-meta.xml
<CustomField>
    <fullName>Pontos_CRM_y_Stock_Mult_NEOG__c</fullName>
    <formula>IF(AND(CRM_NEOG__c = true, NG_Stock_Mult_Realizado__c  &gt;= 8), 
IF(NG_Categoria_resultante__c = &quot;STANDARD&quot;, 0.25, IF(NG_Categoria_resultante__c = &quot;PLUS&quot;, 0.5, 1)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos CRM y Stock Mult NEOG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>