Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Pontos_Porc_Vendas__c.field-meta.xml
<CustomField>
    <fullName>Pontos_Porc_Vendas__c</fullName>
    <formula>IF(BR_Meta_BRMX_porc__c &gt; 0.85, 10, IF(BR_Meta_BRMX_porc__c &gt;= 0.7, 5, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos % Vendas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>