Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Region_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Region_Comercial__c</fullName>
    <formula>TEXT(Cuenta__r.Region__r.Region_Comercial__c)</formula>
    <label>Região Comercial</label>
    <type>Text</type>
</CustomField>