Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Region_Comercial_Copia__c.field-meta.xml
<CustomField>
    <fullName>Region_Comercial_Copia__c</fullName>
    <label>Região Comercial Copia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>