Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Responsavel_BRMX__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_BRMX__c</fullName>
    <formula>TEXT(Cuenta__r.Responsavel__c)</formula>
    <label>Responsável BRMX</label>
    <type>Text</type>
</CustomField>