Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Tecnicos__c.field-meta.xml
<CustomField>
    <fullName>Tecnicos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Técnico (Equipe comercial)</description>
    <inlineHelpText>Técnico (Equipe comercial)</inlineHelpText>
    <label>Técnicos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>