Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Total_Produccion_Real_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Produccion_Real_Actual__c</fullName>
    <label>Total Produccion Real Actual</label>
    <summarizedField>CRM_Infraestructura__c.Produccion_Real_Actual__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Infraestructura__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>A</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Infraestructura__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>