Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Total_SCF__c.field-meta.xml
<CustomField>
    <fullName>Total_SCF__c</fullName>
    <label>Total_SCF</label>
    <summarizedField>CRM_Vendas__c.Volume__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Vendas__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>E</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Vendas__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>