Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Trat_Sem_x_Empresa_Volume_Trat__c.field-meta.xml
<CustomField>
    <fullName>Trat_Sem_x_Empresa_Volume_Trat__c</fullName>
    <label>Trat Sem x Empresa Volume Trat</label>
    <summarizedField>CRM_Infraestructura__c.Volume_Tratado__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Infraestructura__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>B</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Infraestructura__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>