Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Vendas_Otros__c.field-meta.xml
<CustomField>
    <fullName>Vendas_Otros__c</fullName>
    <description>% Vendas otros</description>
    <formula>if (Ventas_Otros_Obt__c=0, 0, Ventas_Otros_Obt__c / Ventas_Totales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>% Vendas otros</inlineHelpText>
    <label>% Vendas Otros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>