Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Ventas_BMX__c.field-meta.xml
<CustomField>
    <fullName>Ventas_BMX__c</fullName>
    <label>Vendas BMX</label>
    <summarizedField>CRM_Vendas__c.Volume__c</summarizedField>
    <summaryFilterItems>
        <field>CRM_Vendas__c.Obtentor__c</field>
        <operation>equals</operation>
        <value>BRMX</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CRM_Vendas__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>B</value>
    </summaryFilterItems>
    <summaryForeignKey>CRM_Vendas__c.CRM_Multiplicador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>