Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Ventas_de_Sem_Tratada__c.field-meta.xml
<CustomField>
    <fullName>Ventas_de_Sem_Tratada__c</fullName>
    <label>Vendas de Sem Tratada</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>