Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/fields/Ventas_Totales__c.field-meta.xml
<CustomField>
    <fullName>Ventas_Totales__c</fullName>
    <description>Suma de las Ventas parciales x Compañías</description>
    <formula>Ventas_BMX__c + Ventas_DMS__c + Ventas_Otros_Obt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Suma de las Ventas parciales x Compañías</inlineHelpText>
    <label>Vendas Totales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>