Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/validationRules/Area_Mult_Propia_Igual_A_Area_Mult_Terc.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_Mult_Propia_Igual_A_Area_Mult_Terc</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR( NOT(ISNULL(Area_multiplic_propia__c)),NOT(ISNULL(area_multiplic_terceirizada__c))), ( IF( ISNULL(Area_multiplic_propia__c), 0, Area_multiplic_propia__c) + IF( ISNULL(area_multiplic_terceirizada__c), 0, area_multiplic_terceirizada__c)) &lt;&gt; 1, FALSE)</errorConditionFormula>
    <errorMessage>% de área de multiplicação própria + % de área de multiplicação terceirizada deve ser 100%</errorMessage>
</ValidationRule>