Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/validationRules/Pl_Area_Mult_Pr_Igual_A_Pl_Area_Mult_T.validationRule-meta.xml
<ValidationRule>
    <fullName>Pl_Area_Mult_Pr_Igual_A_Pl_Area_Mult_T</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR( NOT(ISNULL(Plan_Area_multiplic_propia__c)),NOT(ISNULL(plan_area_multiplic_terceirizada__c))), ( IF( ISNULL(Plan_Area_multiplic_propia__c), 0, Plan_Area_multiplic_propia__c) + IF( ISNULL(plan_area_multiplic_terceirizada__c), 0, plan_area_multiplic_terceirizada__c)) &lt;&gt; 1, FALSE)</errorConditionFormula>
    <errorMessage>% de área de multiplicação própria + % de área de multiplicação terceirizada deve ser 100%</errorMessage>
</ValidationRule>