Salesforce/main/default/main/default/objects/CRM_Multiplicador__c/validationRules/Pl_Ventas_S_Tratar_Mas_Pl_Tratadas_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Pl_Ventas_S_Tratar_Mas_Pl_Tratadas_100</fullName>
    <active>true</active>
    <errorConditionFormula>IF( OR( NOT(ISNULL(Planejamiento_de_Sem_sem_tratar__c)),NOT(ISNULL(Planejamiento_de_Sem_Tratada__c))), ( IF( ISNULL(Planejamiento_de_Sem_sem_tratar__c), 0, Planejamiento_de_Sem_sem_tratar__c) + IF( ISNULL(Planejamiento_de_Sem_Tratada__c), 0, Planejamiento_de_Sem_Tratada__c)) &lt;&gt; 1, FALSE)</errorConditionFormula>
    <errorMessage>% de Vendas de Sem sem tratar + % de Vendas de Sem Tratada deve ser 100%</errorMessage>
</ValidationRule>